recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:12: error: not found: value current
  current(levels)
  ^